fixed-alignment

--- a/src/components/tableComponent/table.css
+++ b/src/components/tableComponent/table.css
@@ -80,7 +80,7 @@
     align-self: stretch;
     display: flex;
     gap: 16px;
-    min-width: 250px;
+    min-width: 220px;
     flex:1;
   }
   
@@ -140,7 +140,7 @@
   .camera-list-item__health {
     display: flex;
     flex:1;
-    width: 100px;
+    min-width: 200px;
   }
   
   .camera-list-item__cloud-status,
